Exploration of fixed positioning: viewport attachment and z-index behavior

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 }
 .body {
     background-color: rgb(166, 223, 139);
+    /* width: 500px; */
+    height: 10400px;
+    margin: 0 auto;
 }
 
 .header {
@@ -15,7 +18,6 @@
     justify-content: space-between;
     width: 100%;
 }
-
 .logo {
     width: 150px;
     height: 100px;
@@ -52,19 +54,15 @@
     padding:10px;
     border-radius: 25px;
 }
-
 table,th,td {
     border: 1px dotted black;
 }
-
 table th td {
-
     border: 1px dashed black;
     border-collapse: collapse;
 }
 
 /******* Section 4 *****/
-
 .section4 {
     background-color: rgb(176, 197, 190);
     /* width: 600px; */
@@ -77,7 +75,6 @@ table th td {
 }
 
 /*************************  Section 5 *******************/
-
 .section5 {
     background-color: rgb(176, 197, 190) ;
     display:flex;
@@ -107,15 +104,12 @@ table th td {
     padding: 8px; 
     border:10px solid black  
 }
-
-
 .section5 li {
     color: blue;
     background-color: bisque;
     display: list-item;
     list-style-type: square;
 }
-/************** Au dessous du Main **********/
 .img_test {
     width: 200px;
     margin-top:10px;
@@ -123,8 +117,7 @@ table th td {
     padding : 80px;
 }
 
-/******* CSS concernant le menu burger ******/
-
+/******* Menu burger en Desktop ******/
 #menuToggle
 {
     display: block;
@@ -135,7 +128,6 @@ table th td {
     -webkit-user-select: none;
     user-select: none;
 }
-
 #menuToggle input
 {
     display: block;
@@ -149,7 +141,6 @@ table th td {
     z-index: 2;
     -webkit-touch-callout: none;
 }
-
 #menuToggle span
 {
     display: block;
@@ -165,17 +156,14 @@ table th td {
     background: 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
     opacity 0.55s ease;
 }
-
 #menuToggle span:first-child
 {
     transform-origin: 0% 0%;
 }
-
 #menuToggle span:nth-last-child(2)
 {
     transform-origin: 0% 100%;
 }
-
 #menuToggle input:checked ~ span
 {
     opacity: 1;
@@ -188,14 +176,12 @@ table th td {
     transform: rotate(0deg)     
       scale(0.2, 0.2);
 }
-
 #menuToggle input:checked ~ span:nth-last-child(2)
 {
     opacity: 1;
     transform: rotate(-45deg) translate(0, -1px);
 }
-
-/*This is the Menu part, which gets triggered by toggle*/
+    /*This is the Menu part, which gets triggered by toggle*/
 #menu
 {   
     position: absolute;
@@ -212,7 +198,6 @@ table th td {
     text-align: center;
 
 }
-
 #menu li
 {
     padding: 15px 0;
@@ -221,28 +206,25 @@ table th td {
     font-size: 1em;
     font-weight: 300;
 }
-
 #menu li a {
       color: #E74C3C;
       text-decoration: none;
       text-transform: uppercase
 }
-
 #menu li a:hover {
     color: #2C3E50;
     text-decoration: none;
 }
-
 #menuToggle input:checked ~ ul
 {
     transform: scale(1.0, 1.0);
     opacity: 1;
 }
-
 .menu_burger {
     display:none;
 }
 /****** Fin Menu burger ******/
+
 /****** Début section 6 sur  */
 .section6 {
     background-color: bisque;
@@ -252,14 +234,12 @@ table th td {
     border-radius: 15px;
 
 }
-
 .section6 p {
   background: rgba(255, 84, 104, 0.3);
   border: 2px solid rgb(255, 84, 104);
   padding: 10px;
   margin: 10px;
 }
-
 .section6 span {
   background: white;
   border: 1px solid black;
@@ -281,22 +261,21 @@ table th td {
     background-color: #fff;
     margin: auto;
 }
-
 .section7 .positioned {
   position: static;
   background: rgb(188, 188, 34);
 }
-
 .section7 p {
         background: bisque;
         border: 3px solid blue;
         padding: 10px;
         margin: 10px;
-      }
+}
 .section7 span {
         background: rgb(225, 181, 181);
         border: 1px solid black;
-      }
+}
+
 /****** Section 8 ******/
 .section8 {
  background-color: rgb(176, 197, 190);
@@ -333,7 +312,7 @@ table th td {
         border: 1px solid black;
       }
 
-/****** Section 8 ******/
+/****** Section 9 ******/
 .section9 {
  background-color: rgb(176, 197, 190);
  margin:50px auto;
@@ -350,22 +329,19 @@ table th td {
     background-color: #fff;
     margin: auto;
 }
-
 .section9 .positioned {
   position: absolute;
   background: rgb(188, 188, 34);
   top: 90px;
   left: 70px;
 }
-
 .section9 p {
         background: bisque;
         border: 3px solid blue;
         padding: 10px;
         margin: 10px;
-      }
-
- p:nth-of-type(1) {
+}
+.section9 p:nth-of-type(1) {
         position: absolute;
         background: lime;
         top: 100px;
@@ -377,7 +353,55 @@ table th td {
         border: 1px solid black;
       }
 
-      /****** Section N ******/
+/****** Section 10 ******/
+.section10 {
+ background-color: rgb(176, 197, 190);
+ margin:50px auto;
+ padding: 10px;
+ border-radius: 25px;
+ width: 1500px;
+ display: flex; 
+ justify-content: center;   
+ flex-direction: column;
+ gap:10px;
+ /* position : relative; */
+}
+.section10 h1 {
+    background-color: #df0808;
+    margin: auto;
+    width: 1500px;
+    position: fixed;
+    /* top: 100px; */
+    top: 0;
+    padding: 20px 600px; 
+    margin-top: 60px;
+    z-index: 3;
+}
+/* .section10 .positioned {
+  position: absolute;
+  background: rgb(188, 188, 34);
+  top: 90px;
+  left: 70px;
+} */
+.section10 p {
+        background: bisque;
+        border: 3px solid blue;
+        padding: 10px;
+        margin: 10px;
+}
+/* .section10 p:nth-of-type(1) {
+        position: absolute;
+        background: lime;
+        top: 100px;
+        right: 30px;
+        z-index: 1;
+ } */
+.section10 span {
+        background: rgb(225, 181, 181);
+        border: 1px solid black;
+      }
+
+/****** Section N ******/
 .sectionN {
     background-color: rgb(176, 197, 190)    ;
     width: 1500px;
